tests/fixtures/invalid/pow_set_int_float.py
# Cannot call pow() with Set[int], Int, Float
x = pow({1, 2, 3}, 1, 1.0)
